# uvalang-analyzer

./: CMakeLists.txt  README.md
.github/workflows/: build-ubuntu-20.04.yml  build-ubuntu-22.04.yml  build-windows-2022.yml
src/: analyser.cpp  analyzer.cpp
